# telco-customer-churn-prediction

./: .dockerignore  .gitignore  Makefile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/api/: __init__.py  fastapi_app.py
app/dashboard/: logic.py  streamlit_app.py
configs/: config.yaml
docs/: ARCHITECTURE.md  RUNBOOK.md
infra/: Dockerfile  docker-compose.yml
notebooks/: 01_data_overview.ipynb
scripts/: check_deps.sh  manage_keys.py
src/: __init__.py
src/data/: __init__.py  data_loader.py  schema.py
src/explainability/: __init__.py  shap_explainer.py
src/feature_engineering/: __init__.py  features.py
src/features/: __init__.py  features.py
src/ingestion/: __init__.py  data_loader.py  schema.py
src/models/: __init__.py  artifact_publisher.py  db.py  evaluate.py  predictor.py  registry.py  train_model.py  train_runner.py  tuning.py
src/pipelines/: __init__.py  cleaner.py  encoder.py  pipeline.py  scaler.py  validator.py
src/preprocessing/: __init__.py  cleaner.py  encoder.py  pipeline.py  scaler.py  validator.py
src/retention_engine/: __init__.py  recommendations.py  segmentation.py
src/utils/: __init__.py  api_keys.py  (+5 more)
tests/: conftest.py  test_api.py  test_api_keys.py  test_cleaning.py  test_dashboard.py  test_features.py  test_logging_filters.py  test_predictor.py  test_registry.py  test_registry_concurrency.py  test_retention.py  test_segmentation.py  test_train_atomic.py  test_train_model.py  test_train_runner.py  test_train_stages.py  test_validation.py
