[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telco-customer-churn-prediction"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "httpx2>=2.0.0",
    "pytest",
    "pytest-cov",
    "ruff==0.15.20",
    "pip-audit>=2.8,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "src"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"app/*" = ["E402"]
"src/models/train_model.py" = ["E402"]
"notebooks/*" = ["E402", "F401"]
"scripts/*" = ["E402"]
